Fix overflow issue

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,6 +1,5 @@
 .footer {
-    overflow: none;
-    width: 100vw;
+    width: 100%;
     height: 3em;
     background-color: var(--color-dark);
     color: var(--color-white);
