--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,5 +1,5 @@
 .header {
-    width: 100vw;
+    width: 100%;
     height: 3em;
     box-shadow: 0 .125rem 5px 0 rgba(#000, .075);
     z-index: 4;
@@ -194,10 +194,6 @@
 
 // Full Desktops media query 
 @media (min-width: 1400px) {
-    .container {
-        max-width: 1320px;
-    }
-
     .header__brand {
         display: flex;
         align-items: center;
