--- a/src/components/WhyUs/index.scss
+++ b/src/components/WhyUs/index.scss
@@ -1,4 +1,9 @@
+.why-us-section {
+    width: 100%;
+}
+
 .section__header {
+    width: 100%;
     font-size: 1.3em;
     text-align: center;
 }
